Continuted to add initial device construction. Added skeleton code for creating AV Switcher devices and TX/RX objects. Add a CEvent for triggering display & interface builds once the switcher is constructed. modified the SystemConfiguration.json file to include some basic DM-MD-8x8 configuration data.

--- a/ReflectionExample/Config/SystemConfiguration.json
+++ b/ReflectionExample/Config/SystemConfiguration.json
@@ -38,12 +38,20 @@
         "Master": "r-a104d-2s-cp3n.mesa.gmu.edu",
         "InputCards": [
           {
-            "ClassName": "Crestron.SimplSharpPro.Dm.Cards.Dmc4kHd",
+            "ClassName": "Crestron.SimplSharpPro.DM.Cards.Dmc4kHd",
             "SlotNumber": 1
           },
           {
-            "ClassName": "Crestron.SimplSharpPro.Dm.Cards.Dmc4kHd",
+            "ClassName": "Crestron.SimplSharpPro.DM.Cards.Dmc4kHd",
             "SlotNumber": 2
+          },
+          {
+			"ClassName" : "Crestron.SimplSharpPro.DM.Cards.DmcC",
+			"SlotNumber" : 3
+          },
+          {
+			"ClassName" : "Crestron.SimplSharpPro.DM.Cards.DmcC",
+			"SlotNumber" : 4
           }
         ],
         "OutputCards": [
